# plover-discord-presence

./: pyproject.toml
src/plover_discord_presence/: plover_rpc.py
